add bot framework

--- a/SimpleBotCore/Properties/launchSettings.json
+++ b/SimpleBotCore/Properties/launchSettings.json
@@ -13,8 +13,8 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "launchUrl": "messages",
-      "applicationUrl": "http://localhost:3978",
+      "launchUrl": "api/messages",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
