--- a/SimpleBotCore/SimpleBotCore.csproj
+++ b/SimpleBotCore/SimpleBotCore.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Bot.Connector" Version="4.14.1" />
+  </ItemGroup>
+
 </Project>
