--- a/SimpleBotCore/SimpleBotCore.csproj
+++ b/SimpleBotCore/SimpleBotCore.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.Bot.Connector" Version="4.14.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
