--- a/SimpleBotCore/SimpleBotCore.csproj
+++ b/SimpleBotCore/SimpleBotCore.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Bot.Connector" Version="4.14.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    <PackageReference Include="MongoDB.Driver" Version="2.13.1" />
+    <PackageReference Include="MongoDB.Bson" Version="2.13.1" />
   </ItemGroup>
 
 </Project>
